# imagemaker

./: .gitignore  README.md
entrypoints/: app-start-poetry-deepnox.bash  entrypoint.bash
entrypoints/modules/: core.module.bash  logging.module.bash  simple-logging.module.bash
maker/: pyproject.toml
maker/src/deepnox/builders/dockerfile/: maker.py
maker/tests/: dockerfile_maker_test.py
scripts/: download.module.bash
